

2020-07-19  Edward Hart <edward.dan.hart@gmail.com>

	* mlio.c, common.h: added support for JSON-C as JSON handler.

2020-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* mlio.c, common.h: added decimal_point param to cob_xml/json_generate.

2020-07-15  Ron Norman <rjn@inglenet.com>

	* call.c,common.h,common.c: Have cob_module_free in common.c
			clean up the list of modules used in call.c to avoid
			reference to freed memory

2020-07-07  Edward Hart <edward.dan.hart@gmail.com>

	* mlio.c: fixed memory issue.

2020-07-07  Ron Norman <rjn@inglenet.com>

	* call.c,common.h: Remove  cob_set_num_params

2020-07-07  Ron Norman <rjn@inglenet.com>

	* call.c,common.h: Add new functions cob_call_cobol and cob_call_entry
			for C modules to call COBOL modules using 'stdarg' type of
				parameter passing.

2020-06-25  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_close) [_WIN32]: pipe code compiles again, but still
	  is not tested...
	* common.c (cob_sys_system): deactivated WEXITSTATUS for now as MicroFocus
	  doesn't do this --> may be added later with a runtime configuration
	* common.h, coblocal.h (cob_runtime_hint, cob_runtime_error,
	  cob_runtime_warning): made runtime message functions available again

2020-06-23  Ron Norman <rjn@inglenet.com>

	* exception.def: Added COB_EC_DELETE_FILE
	* fileio.c: Set COB_EC_DELETE_FILE as required
	* fextfh.c: Prepare for cob_delete_file given 'override' option

2020-06-20  Ron Norman <rjn@inglenet.com>

	* common.h: add mapkey to cob_file
	* fileio.c,fisam.c: Fix to handle old VBISAM that does not support 
	            sparse indexes

2020-06-20  Ron Norman <rjn@inglenet.com>

	* fisam.c,fbdb.c: Fix to return status 21 instead of 22 when OPEN OUTPUT

2020-06-18  Ron Norman <rjn@inglenet.com>

	* coblocal.h,common.h: add flags for LS_INSTAB (Like MF INSERTTAB)
	* common.c: Accept COB_MF_LS_INSTAB/mf_ls_instab in runtime.cfg
	* fileio.c: Handle "ls_instab" option similar to MF INSERTTAB
